--- a/packages/ui/src/components/Card/Card.stories.mdx
+++ b/packages/ui/src/components/Card/Card.stories.mdx
@@ -1,5 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
 
+import { baseTheme } from '../../css/theme.css'
 import Card from './Card'
 
 <Meta title="Components/Card" component={Card} />
