Properties for border and box shadow

--- a/packages/ui/src/components/Box/Box.stories.mdx
+++ b/packages/ui/src/components/Box/Box.stories.mdx
@@ -29,4 +29,15 @@ The box component is the foundational building block of all components in the li
 	</Story>
 </Canvas>
 
+<Canvas>
+	<Story name="Border">
+		<Box borderRadius="default" boxShadow="default" p="large">
+			Default
+		</Box>
+		<Box borderRadius="large" boxShadow="default" p="large">
+			Large
+		</Box>
+	</Story>
+</Canvas>
+
 <Props of={Box} />
